--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <i class="uil uil-behance"></i>
                             </a>
 
-                            <a href="http://www.github.com/ssasni" target="_blank" class="home__social-icon">
+                            <a href="http://www.github.com/sassni" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
                         </div>
